--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sequelize": "sequelize",
@@ -9,7 +9,8 @@
     "start": "per-env",
     "start:development": "nodemon ./bin/www",
     "start:production": "node ./bin/www",
-    "build": "node psql-setup-script.js"
+    "build": "node psql-setup-script.js",
+    "dbreset": "npx dotenv sequelize db:seed:undo:all && npx dotenv sequelize db:migrate:undo:all && npx dotenv sequelize db:migrate && npx dotenv sequelize db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +34,6 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7"
